# github-map

./: .env.example  .gitignore  00_enumerate_repos.py  01_fetch_repos.py  01b_summarize_readmes.py  01c_generate_taglines.py  01c_patch_readmes.py  02_embed_readmes.py  02_select_top_repos.py  03_reduce_umap.py  03_summarize_readmes.py  03b_experiment.py  04_embed_readmes.py  04_label_topics.py  04b_experiment.py  04c_experiment_pca.py  05_reduce_umap.py  05_visualize.py  05b_visualize_experiments.py  05b_visualize_pca.py  06_label_topics.py  07_visualize.py  CLAUDE.md  Makefile  README.md  candidates.csv  config.py  filter_panel.html  patch_repos.py  pyproject.toml  run_pipeline.sh
.github/workflows/: ci.yml  lint.yml
docs/: filter_panel.html  index.html  methodology.html
experiments/: compare_toponymy_configs.py  probe_dependencies.py
pipeline/: 00_enumerate_repos.py  01_fetch_repos.py  02_select_top_repos.py  03_summarize_readmes.py  04_embed_readmes.py  05_reduce_umap.py  07_visualize.py  08_fetch_dependencies.py  09_enrich_external.py  10_build_graph.py  config.py
tests/: test_config.py  test_fetch_repos.py  test_summarize_readmes.py  test_visualize.py
